--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "cookie-session": "~2.0.0-beta.3",
     "ejs": "~2.6.1",
-    "express": "~4.16.3"
+    "express": "~4.16.3",
+    "socket.io": "^2.1.1"
   },
   "devDependencies": {
     "eslint": "^5.5.0",
